app/assets/stylesheets/components/_navbar.scss
.navbar-lewagon {
  justify-content: space-between;
  background: white;
  border-bottom: solid;
  border-width: 2px;
  position: sticky;
  top: 0;
  z-index: 200;

}


.navbar-lewagon .navbar-collapse {
  flex-grow: 0;
}

.navbar-lewagon .navbar-brand img {
  width: 40px;
  cursor: default;
}

.avatar.dropdown-toggle {
  margin-right: 1vw;
}

.nav-item p {
  color: grey;
  margin: 0;
  line-height: 2.5em;
}


a.nav-link {
  width: 100%;
  margin: 0 auto;
  color: grey !important;
  display: inline-block;
}

li.nav-item  {
  list-style: none;
  display: inline-block;
}

